feat: generating roads

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
       <!-- <button onclick="removeAll()">Remove All</button> -->
     </div>
 
+    <script src="js/world.js"></script>
     <script src="js/graphEditor.js"></script>
     <script src="js/viewport.js"></script>
     <script src="js/math/utils.js"></script>
     <script src="js/math/graph.js"></script>
     <script src="js/primitive/point.js"></script>
     <script src="js/primitive/segment.js"></script>
+    <script src="js/primitive/polygon.js"></script>
+    <script src="js/primitive/envelope.js"></script>
     <script>
       const myCanvas = document.getElementById("myCanvas");
       myCanvas.width = 700;
@@ -37,6 +40,7 @@
       const graphString = localStorage.getItem("graph");
       const graphInfo = graphString ? JSON.parse(graphString) : null;
       const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
+      const world = new World(graph);
       const viewport = new Viewport(myCanvas);
       const graphEditor = new GraphEditor(viewport, graph);
 
@@ -44,6 +48,9 @@
 
       function animate() {
         viewport.reset();
+        world.generate();
+        world.draw(ctx);
+        ctx.globalAlpha = 0.3;
         graphEditor.display();
         requestAnimationFrame(animate);
       }
@@ -58,4 +65,3 @@
     </script>
   </body>
 </html>
-
