--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
       <div>
         <button id="graphBtn" onclick="setMode('graph')">🗺️</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
+        <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
       </div>
     </div>
 
     <script src="js/world.js"></script>
     <script src="js/viewport.js"></script>
     <script src="js/markings/stop.js"></script>
+    <script src="js/markings/crossing.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
+    <script src="js/editors/crossingEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
     <script src="js/math/utils.js"></script>
@@ -49,6 +52,7 @@
       const viewport = new Viewport(myCanvas);
       const graphEditor = new GraphEditor(viewport, graph);
       const stopEditor = new StopEditor(viewport, world);
+      const crossingEditor = new CrossingEditor(viewport, world);
 
       let oldGraphHash = graph.hash();
       setMode("graph");
@@ -65,6 +69,7 @@
         ctx.globalAlpha = 0.3;
         graphEditor.display();
         stopEditor.display();
+        crossingEditor.display();
         requestAnimationFrame(animate);
       }
 
@@ -90,6 +95,11 @@
             stopBtn.style.filter = "";
             stopEditor.enable();
             break;
+          case "crossing":
+            crossingBtn.style.backgroundColor = "white";
+            crossingBtn.style.filter = "";
+            crossingEditor.enable();
+            break;
         }
       }
 
@@ -100,6 +110,9 @@
         stopBtn.style.backgroundColor = "gray";
         stopBtn.style.filter = "grayscale(100%)";
         stopEditor.disable();
+        crossingBtn.style.backgroundColor = "gray";
+        crossingBtn.style.filter = "grayscale(100%)";
+        crossingEditor.disable();
       }
     </script>
   </body>
