--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
     <script src="js/world.js"></script>
     <script src="js/viewport.js"></script>
+    <script src="js/markings/marking.js"></script>
     <script src="js/markings/stop.js"></script>
     <script src="js/markings/crossing.js"></script>
+    <script src="js/editors/markingEditor.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
     <script src="js/editors/crossingEditor.js"></script>
@@ -50,9 +52,15 @@
       const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
       const world = new World(graph);
       const viewport = new Viewport(myCanvas);
-      const graphEditor = new GraphEditor(viewport, graph);
-      const stopEditor = new StopEditor(viewport, world);
-      const crossingEditor = new CrossingEditor(viewport, world);
+
+      const tools = {
+        graph: { button: graphBtn, editor: new GraphEditor(viewport, graph) },
+        stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
+        crossing: {
+          button: crossingBtn,
+          editor: new CrossingEditor(viewport, world),
+        },
+      };
 
       let oldGraphHash = graph.hash();
       setMode("graph");
@@ -67,14 +75,14 @@
         const viewPoint = scale(viewport.getOffset(), -1);
         world.draw(ctx, viewPoint);
         ctx.globalAlpha = 0.3;
-        graphEditor.display();
-        stopEditor.display();
-        crossingEditor.display();
+        for (const tool of Object.values(tools)) {
+          tool.editor.display();
+        }
         requestAnimationFrame(animate);
       }
 
       function dispose() {
-        graphEditor.dispose();
+        tools["graph"].editor.dispose();
         world.markings.length = 0;
       }
 
@@ -84,35 +92,17 @@
 
       function setMode(mode) {
         dissabledEditors();
-        switch (mode) {
-          case "graph":
-            graphBtn.style.backgroundColor = "white";
-            graphBtn.style.filter = "";
-            graphEditor.enable();
-            break;
-          case "stop":
-            stopBtn.style.backgroundColor = "white";
-            stopBtn.style.filter = "";
-            stopEditor.enable();
-            break;
-          case "crossing":
-            crossingBtn.style.backgroundColor = "white";
-            crossingBtn.style.filter = "";
-            crossingEditor.enable();
-            break;
-        }
+        tools[mode].button.style.backgroundColor = "white";
+        tools[mode].button.style.filter = "";
+        tools[mode].editor.enable();
       }
 
       function dissabledEditors() {
-        graphBtn.style.backgroundColor = "gray";
-        graphBtn.style.filter = "grayscale(100%)";
-        graphEditor.disable();
-        stopBtn.style.backgroundColor = "gray";
-        stopBtn.style.filter = "grayscale(100%)";
-        stopEditor.disable();
-        crossingBtn.style.backgroundColor = "gray";
-        crossingBtn.style.filter = "grayscale(100%)";
-        crossingEditor.disable();
+        for (const tool of Object.values(tools)) {
+          tool.button.style.backgroundColor = "gray";
+          tool.button.style.filter = "grayscale(100%)";
+          tool.editor.disable();
+        }
       }
     </script>
   </body>
