feat: road markings, add yield marks

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
         <button id="graphBtn" onclick="setMode('graph')">🗺️</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
+        <button id="yieldBtn" onclick="setMode('yield')">🔺</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
         <button id="startBtn" onclick="setMode('start')">🚗</button>
       </div>
@@ -30,11 +31,13 @@
     <script src="js/markings/stop.js"></script>
     <script src="js/markings/start.js"></script>
     <script src="js/markings/crossing.js"></script>
+    <script src="js/markings/yield.js"></script>
     <script src="js/editors/markingEditor.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
     <script src="js/editors/startEditor.js"></script>
     <script src="js/editors/crossingEditor.js"></script>
+    <script src="js/editors/yieldEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
     <script src="js/math/utils.js"></script>
@@ -60,6 +63,7 @@
         graph: { button: graphBtn, editor: new GraphEditor(viewport, graph) },
         stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
         start: { button: startBtn, editor: new StartEditor(viewport, world) },
+        yield: { button: yieldBtn, editor: new YieldEditor(viewport, world) },
         crossing: {
           button: crossingBtn,
           editor: new CrossingEditor(viewport, world),
