feat: road markings, add target marks

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="yieldBtn" onclick="setMode('yield')">🔺</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
         <button id="startBtn" onclick="setMode('start')">🚗</button>
+        <button id="targetBtn" onclick="setMode('target')">🎯</button>
       </div>
     </div>
 
@@ -32,11 +33,13 @@
     <script src="js/markings/start.js"></script>
     <script src="js/markings/crossing.js"></script>
     <script src="js/markings/yield.js"></script>
+    <script src="js/markings/target.js"></script>
     <script src="js/editors/markingEditor.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
     <script src="js/editors/startEditor.js"></script>
     <script src="js/editors/crossingEditor.js"></script>
+    <script src="js/editors/targetEditor.js"></script>
     <script src="js/editors/yieldEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
@@ -64,6 +67,10 @@
         stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
         start: { button: startBtn, editor: new StartEditor(viewport, world) },
         yield: { button: yieldBtn, editor: new YieldEditor(viewport, world) },
+        target: {
+          button: targetBtn,
+          editor: new TargetEditor(viewport, world),
+        },
         crossing: {
           button: crossingBtn,
           editor: new CrossingEditor(viewport, world),
