feat: road markings, add parking marks

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
       </div>
       <div>
         <button id="graphBtn" onclick="setMode('graph')">🗺️</button>
-        <button id="stopBtn" onclick="setMode('stop')">🛑</button>
-        <button id="yieldBtn" onclick="setMode('yield')">🔺</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
+        <button id="parkingBtn" onclick="setMode('parking')">🅿️</button>
         <button id="startBtn" onclick="setMode('start')">🚗</button>
+        <button id="stopBtn" onclick="setMode('stop')">🛑</button>
         <button id="targetBtn" onclick="setMode('target')">🎯</button>
+        <button id="yieldBtn" onclick="setMode('yield')">🔺</button>
       </div>
     </div>
 
@@ -33,12 +34,14 @@
     <script src="js/markings/start.js"></script>
     <script src="js/markings/crossing.js"></script>
     <script src="js/markings/yield.js"></script>
+    <script src="js/markings/parking.js"></script>
     <script src="js/markings/target.js"></script>
     <script src="js/editors/markingEditor.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
     <script src="js/editors/startEditor.js"></script>
     <script src="js/editors/crossingEditor.js"></script>
+    <script src="js/editors/parkingEditor.js"></script>
     <script src="js/editors/targetEditor.js"></script>
     <script src="js/editors/yieldEditor.js"></script>
     <script src="js/items/tree.js"></script>
@@ -67,6 +70,10 @@
         stop: { button: stopBtn, editor: new StopEditor(viewport, world) },
         start: { button: startBtn, editor: new StartEditor(viewport, world) },
         yield: { button: yieldBtn, editor: new YieldEditor(viewport, world) },
+        parking: {
+          button: parkingBtn,
+          editor: new ParkingEditor(viewport, world),
+        },
         target: {
           button: targetBtn,
           editor: new TargetEditor(viewport, world),
@@ -122,3 +129,4 @@
     </script>
   </body>
 </html>
+
