--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 
       const ctx = myCanvas.getContext("2d");
 
-      const graphString = localStorage.getItem("graph");
-      const graphInfo = graphString ? JSON.parse(graphString) : null;
-      const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
-      const world = new World(graph);
-      const viewport = new Viewport(myCanvas);
+      const worldString = localStorage.getItem("world");
+      const worldInfo = worldString ? JSON.parse(worldString) : null;
+      let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
+      const graph = world.graph;
+
+      const viewport = new Viewport(myCanvas, world.zoom, world.offset);
 
       const tools = {
         graph: { button: graphBtn, editor: new GraphEditor(viewport, graph) },
@@ -113,7 +114,7 @@
       }
 
       function save() {
-        localStorage.setItem("graph", JSON.stringify(graph));
+        localStorage.setItem("world", JSON.stringify(world));
       }
 
       function setMode(mode) {
